<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0F1B2B">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0F1B2B">

            <ImageButton
                android:id="@+id/ib_back_to_films"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:background="#0F1B2B"
                android:src="@drawable/arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ib_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="18dp"
                android:background="#0F1B2B"
                android:src="@drawable/respond_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_poster_in_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ib_back_to_films" />

            <TextView
                android:id="@+id/tv_film_name_in_description"
                style="@style/HeaderText"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:hint="@string/film"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_poster_in_description" />

            <TextView
                android:id="@+id/tv_duration_in_description"
                style="@style/SecondaryText"
                android:layout_marginTop="16dp"
                android:hint="@string/time"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_film_name_in_description" />

            <TextView
                android:id="@+id/tv_minutes"
                style="@style/SecondaryText"
                android:text="@string/m"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_duration_in_description"
                app:layout_constraintStart_toEndOf="@+id/tv_duration_in_description"
                app:layout_constraintTop_toTopOf="@+id/tv_duration_in_description" />

            <TextView
                android:id="@+id/tv_genre_in_description"
                style="@style/SecondaryText"
                android:layout_marginTop="9dp"
                android:hint="@string/genre"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_duration_in_description" />

            <TextView
                android:id="@+id/tv_synopsis"
                style="@style/HeaderText"
                android:layout_marginStart="16dp"
                android:layout_marginTop="33dp"
                android:text="@string/synopsis"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre_in_description" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="17dp"
                android:alpha="0.7"
                android:fontFamily="@font/sf_pro_tex_regular"
                android:hint="@string/description"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_synopsis" />

            <TextView
                android:id="@+id/tv_cast_and_crew_in_description"
                style="@style/HeaderText"
                android:layout_marginStart="18dp"
                android:layout_marginTop="20dp"
                android:text="@string/cast_crew"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_description" />

            <TextView
                android:id="@+id/tv_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="17dp"
                android:clickable="true"
                android:fontFamily="@font/sf_pro_tex_regular"
                android:text="@string/view_all"
                android:textColor="#47CFFF"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_cast_and_crew_in_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_cast_and_crew_in_description" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_credits_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="14dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_cast_and_crew_in_description"
                tools:listitem="@layout/item_crew" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_shadow_start_color"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>



